--- a/kadai_005/thml/kadai_005.html
+++ b/kadai_005/thml/kadai_005.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
-  <meta name="descirption="このページは5章の課題です。">
+  <title>５章課題</title>
+  <meta name="descirption content="このページは5章の課題です。">
   <meta charset="utf-8">
 </head>
 <body>
   <h1>私の趣味</h1>
-  <p>私は中学時代にサッカーをはじめました。<br>
+  <p>私は中学時代にサッカーを始めました。<br>
   現在はサッカーのコーチとして活動をして、趣味のサッカーを楽しんでいます。
   </p>
-  <img src="../images/sample.jpg" alt="サッカーボールの写真"><>
+  <img src="../images/sample.jpg" alt="サッカーボールの写真"><br>
   <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
