--- a/kadai_005/thml/kadai_005.html
+++ b/kadai_005/thml/kadai_005.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>５章課題</title>
-  <meta name="descirption content="このページは5章の課題です。">
+  <title>5章課題</title>
+  <meta name="description content="このページは5章の課題です。">
   <meta charset="utf-8">
 </head>
 <body>
@@ -14,3 +14,4 @@
   <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
+
