--- a/kadai_005/thml/kadai_005.html
+++ b/kadai_005/thml/kadai_005.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>5章課題</title>
-  <meta name="description content="このページは5章の課題です。">
+  <meta name="description" content="このページは5章の課題です。">
   <meta charset="utf-8">
 </head>
 <body>
@@ -14,4 +14,5 @@
   <a href="https://x.com/samuraijuku">私のプロフィールはこちら</a>
 </body>
 </html>
+
 
