--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -28,10 +28,10 @@
     <section>
       <h3>私のおすすめ和菓子アンケートフォーム</h3>
       <form>
-        <lavel>氏名</lavel>
+        <label>氏名</label>
         <input type="text" placeholder="名前を入力してください">
         <br>
-        <lavel>年代</lavel>
+        <label>年代</label>
         <select>
           <option>10代以下</option>
           <option>20代</option>
@@ -43,7 +43,7 @@
           <label>女性</label><input type="radio" name="gender">
           <label>その他</label><input type="radio" name="gender">
           <br>
-          <laber>おすすめの和菓子の名称</laber>
+          <label>おすすめの和菓子の名称</label>
           <input type="text" placeholder="例：みたらし団子">
           <br>
           <label>おすすめする理由</label>
