Fix HTML formatting and structure
お奨めの和菓子　のを入れた

--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -26,7 +26,7 @@
       <audio src="ichi.mp3" controls></audio>
     </section>
     <section>
-      <h3>私のおすすめ和菓子アンケートフォーム</h3>
+      <h3>私のおすすめの和菓子アンケートフォーム</h3>
       <form>
         <label>氏名</label>
         <input type="text" placeholder="名前を入力してください">
@@ -72,4 +72,5 @@
     <p>&copy;SAMURAIニュース</p>
   </footer>
 </body>
+
 </html>
